2002-12-18  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/flockfile.c (flockfile): Change into weak alias.
	* sysdeps/unix/sysv/linux/raise.c (gsignal): Add weak alias to raise.
	* Versions [libc: GLIBC_2.0]: Add pthread_attr_init.
	[libpthread: GLIBC_2.1]: Remove __pthread_rwlock_init,
	__pthread_rwlock_destroy, __pthread_rwlock_rdlock,
	__pthread_rwlock_wrlock, __pthread_rwlock_unlock,
	__pthread_rwlock_tryrdlock and __pthread_rwlock_trywrlock.

2002-12-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h: Use ENTER_KERNEL
	macro instead of using int $0x80 directly.

	* sysdeps/pthread/bits/stdio-lock.h: New file.
	* sysdeps/unix/sysv/linux/i386/i486/libc-lowlevelmutex.S: New file.
	* sysdeps/unix/sysv/linux/i386/i586/libc-lowlevelmutex.S: New file.
	* sysdeps/unix/sysv/linux/i386/i686/libc-lowlevelmutex.S: New file.
	* Makefile (routines): Add libc-lowlevelmutex.

	* sysdeps/unix/sysv/linux/i386/i486/libc-lowlevellock.S: Remove
	__i686.get_pc_thunk.dx.

2002-12-17  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (libpthread-shared-only-routines): Add pt-allocrtsig.
	(tests): Depend on $(objpfx)tst-cancel-wrappers.out.
	($(objpfx)tst-cancel-wrappers.out): New rule.
	* tst-cancel-wrappers.sh: New test.
	* tst-locale1.c: Include signal.h.
	(uselocale): Test static linking of __libc_current_sigrt*.

2002-12-17  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-cancel6.
	* tst-cancel6.c: New file

2002-12-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h (SINGLE_THREAD_P):
	Define meaningfully for assembler as well.
	* pthreadP.h (struct pthread_functions): Remove
	ptr_pthread_attr_init field.  Add ptr_pthread_attr_init_2_0
	and ptr_pthread_attr_init_2_1 fields.
	* init.c (pthread_functions): Initialize ptr_pthread_attr_init_2_0
	and ptr_pthread_attr_init_2_1 instead of ptr_pthread_attr_init.
	* forward.c (FORWARD4): Renamed from FORWARD3. Add export argument.