@@ -68,6 +68,9 @@ struct pthread
       struct pthread *self;       /* Pointer to this structure */
       list_t list;
       int multiple_threads;
+#ifdef NEED_DL_SYSINFO
+      uintptr_t sysinfo;
+#endif
     } data;
     void *__padding[16];
   } header;
